--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,22 +1,34 @@
 @import "vars.css";
-  
-  .centered {
-    @apply --centered;
-  }
-  
+@import "base";
+@import "layout.css";
 
+
+.centered {
+  @apply --centered;
+}
+
+.header, .footer {
+  background: var(--highlightColor);
+}
+
+
+h1 {
+  color: rgb(250, 15, 15);
+  text-align: center;
+  font-size: 36px;
+  padding: 40px 0;
+}
   
   /* some var() & calc() */
   body {
-  color: var(--mainColor);
+  background-color: var(--mainColor);
   
-  font-size: var(--fontSize);
-  line-height: calc(var(--fontSize) * 1.5);
-  padding: calc((var(--fontSize) / 2) + 1px);
+  font-size: var(--fontSize)*1.2;
+  line-height: calc(var(--fontSize) * 1.7);
   }
   
   /* custom media query usage */
   @media (--viewport-medium) {
-  body { font-size: calc(var(--fontSize) * 1.2); }
+  body { font-size: calc(var(--fontSize) * .9); }
   }
-  
+ 
