added fonts and images scripts; add README.md

--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -5,12 +5,17 @@ block content
   .container
 
     h2 This is a content of the index page
-    - var list= ['One', 'Two', 'Three', 'Four', 'Five', 'Six', 'Seven']
+    - var list= ['One', 'Two', 'Three']
     ul
       each item in list
         li= item 
     p Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, voluptatibus? Dolores et voluptas laudantium iste!
     p Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae harum sapiente ut velit cupiditate molestiae deserunt perspiciatis et cumque laborum, alias cum vero dignissimos consequuntur ex iste, veniam illum? Doloremque quidem delectus sequi nobis, quasi ratione provident labore modi consequatur?
+    h2 This is just paragraph
+    - var images = ['../img/fire.jpeg','../img/girl.jpeg','../img/rock.jpeg','../img/sea.jpeg', '../img/photo.jpeg', '../img/city.jpeg']
+    each image in images
+      img(src= image).w100
+      
     p Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates asperiores numquam quo ullam quaerat ipsa quisquam quos labore ab dolorum aperiam, nemo cumque mollitia praesentium accusamus aut officia architecto deleniti repellat neque tempora impedit. Reiciendis nobis voluptas minus. Dolorum alias illum libero est consequatur similique reprehenderit possimus, deserunt placeat nesciunt laborum in earum tempore harum delectus tempora. Illum totam in, eum eligendi culpa exercitationem voluptatum, odio incidunt placeat, quam suscipit ea quae earum. Vel aliquid corrupti praesentium dignissimos velit sequi facilis fugiat illum iure, rerum voluptate adipisci commodi ducimus nesciunt ea fuga libero, provident iusto quas repellendus unde cumque aut.
 
   include includes/footer
