--- a/src/css/main.css
+++ b/src/css/main.css
@@ -22,7 +22,7 @@ h1 {
   /* some var() & calc() */
   body {
   background-color: var(--mainColor);
-  
+  font-family: var(--ff-roboto);
   font-size: var(--fontSize)*1.2;
   line-height: calc(var(--fontSize) * 1.7);
   }
@@ -32,3 +32,7 @@ h1 {
   body { font-size: calc(var(--fontSize) * .9); }
   }
  
+h3 {
+  padding: 15px;
+  text-align: center;
+}
