--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -20,3 +20,6 @@ block content
     p Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates asperiores numquam quo ullam quaerat ipsa quisquam quos labore ab dolorum aperiam, nemo cumque mollitia praesentium accusamus aut officia architecto deleniti repellat neque tempora impedit. Reiciendis nobis voluptas minus. Dolorum alias illum libero est consequatur similique reprehenderit possimus, deserunt placeat nesciunt laborum in earum tempore harum delectus tempora. Illum totam in, eum eligendi culpa exercitationem voluptatum, odio incidunt placeat, quam suscipit ea quae earum. Vel aliquid corrupti praesentium dignissimos velit sequi facilis fugiat illum iure, rerum voluptate adipisci commodi ducimus nesciunt ea fuga libero, provident iusto quas repellendus unde cumque aut.
 
   include includes/footer
+
+  script(src="js/vendor.js")
+  script(src='js/main.js')
