--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -2,9 +2,5 @@
   max-width: 1140px;
   margin: 0 auto;
   padding: 0 15px;
-  background: rgba(255, 0, 0, .1);
-}
-
-.w100 {
-  width: 100%;
+  background: rgba(209, 117, 117, 0.1);
 }
