--- a/src/templates/base.pug
+++ b/src/templates/base.pug
@@ -8,3 +8,7 @@ html(lang="en")
     link(rel="stylesheet", href="css/main.min.css")
   body
     block content
+
+
+    script(src="js/vendor.js")
+    script(src='js/main.js')
