--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -1,25 +1,10 @@
 extends base
 
 block content
-  include includes/header
-  .container
 
-    h2 This is a content of the index page
-    - var list= ['One', 'Two', 'Three']
-    ul
-      each item in list
-        li= item 
-    p Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, voluptatibus? Dolores et voluptas laudantium iste!
-    p Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae harum sapiente ut velit cupiditate molestiae deserunt perspiciatis et cumque laborum, alias cum vero dignissimos consequuntur ex iste, veniam illum? Doloremque quidem delectus sequi nobis, quasi ratione provident labore modi consequatur?
-    h2 This is just paragraph
-    - var images = ['../img/fire.jpeg','../img/girl.jpeg','../img/rock.jpeg','../img/sea.jpeg', '../img/photo.jpeg', '../img/city.jpeg']
-    each image, index in images
-      h3 Image #{index + 1}
-      img(src= image).w100
-      
-    p Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates asperiores numquam quo ullam quaerat ipsa quisquam quos labore ab dolorum aperiam, nemo cumque mollitia praesentium accusamus aut officia architecto deleniti repellat neque tempora impedit. Reiciendis nobis voluptas minus. Dolorum alias illum libero est consequatur similique reprehenderit possimus, deserunt placeat nesciunt laborum in earum tempore harum delectus tempora. Illum totam in, eum eligendi culpa exercitationem voluptatum, odio incidunt placeat, quam suscipit ea quae earum. Vel aliquid corrupti praesentium dignissimos velit sequi facilis fugiat illum iure, rerum voluptate adipisci commodi ducimus nesciunt ea fuga libero, provident iusto quas repellendus unde cumque aut.
+  include includes/header
+
+  .container
+    p Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente reprehenderit deserunt amet iusto dicta eaque dolore consequuntur molestias similique laboriosam voluptates minima molestiae, commodi eius a ducimus quibusdam illo! Dolorem ratione iste quas vel ad. Vel ullam cum repellendus veritatis iure omnis, quae eveniet accusantium repellat quam modi magni incidunt dolorem at labore voluptas expedita! Sint quidem dolores dolor veniam quibusdam voluptatibus. Distinctio aliquam laudantium rerum reprehenderit nulla molestiae, debitis quas provident velit sunt id unde quasi accusamus neque. Fugit voluptate reprehenderit architecto eaque nemo quidem quae, consequuntur labore pariatur minima? Laudantium eaque minima ipsam minus sapiente est nulla dolor.
 
   include includes/footer
-
-  script(src="js/vendor.js")
-  script(src='js/main.js')
